--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "https://treestructure.io"
+  },
   "ConnectionStrings": {
     "TreeStructureCsWin": "Server=localhost\\SQLEXPRESS;Database=TreeStructureDB;Trusted_Connection=True",
     "TreeStructureCsMac": "Server=localhost,1433\\Catalog=myDatabase;Database=TreeStructureDB;User Id=SA;Password=Siemka123;"
